# citationManager-ng

./: .gitignore  Readme.md  pyproject.toml
cmTools/: bibLaTeXAuthors.py  bibLaTeXCitations.py  bibLaTeXYaml.py  cmEdit.py  collator.py  config.py  generator.py  parser.py  pybtex.py  scanner.py  writeAuthorTiddlers.py  writeCitationTiddlers.py  wxCitationDialogs.py  wxEditors.py  wxPeopleDialogs.py
cmTools/resources/: biblatexFieldOrder.yaml.orig  biblatexFields.yaml  biblatexFields.yaml.orig  biblatexTypes.yaml  biblatexTypes.yaml.orig  checkYaml  citationFieldOrder.yaml.orig  crossReference  crossReference.py
docs/: NewReferences.md  Readme.md  UsingWxPython.md
scripts/: installEditableCMCommands  mountReferences  unmountReferences
scripts/corrections/: fixBiblatex  fixBiblatex.py
